fix overflow details

--- a/frontend/src/components/ClubPage/ClubPage.css
+++ b/frontend/src/components/ClubPage/ClubPage.css
@@ -33,18 +33,8 @@
     background: linear-gradient(135deg, #ffffff, #f8f8f8);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     z-index: 1;
-}
-
-.club-header {
-    margin-bottom: 30px;
-}
-
-.club-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .logo {
@@ -71,11 +61,10 @@
     display: grid;
     align-self: center;
     grid-template-columns: 1fr 1fr;
-    min-width: 90%;
+    width: 90%;
     gap: 30px;
     margin-top: 50px;
     min-height: 50%;
-    overflow: scroll;
 }
 
 .clubCard {
